--- a/cryptocurrency/css/style.css
+++ b/cryptocurrency/css/style.css
@@ -30,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: #20509e;
+	color: #800000;
 	margin: 0;
 	font-weight: 500;
 	font-family: "Futura", sans-serif;
@@ -171,7 +171,7 @@ ol {
 }
 
 .site-btn.sb-gradients.sbg-line {
-	color: #20509e;
+	color: #800000;
 	z-index: 1;
 }
 
