--- a/cryptocurrency/css/style.css
+++ b/cryptocurrency/css/style.css
@@ -342,7 +342,7 @@ ol {
 	height: 900px;
 	padding-top: 260px;
 	display: block;
-	background-image: url("../img/hero-bg.png");
+	background-image: url("../img/PBELogo.png");
 	background-size: cover;
 	background-color: #f3f7f9;
 	background-position: right top;
