bottom middle background position update
from middle

--- a/cryptocurrency/css/style.css
+++ b/cryptocurrency/css/style.css
@@ -345,7 +345,7 @@ ol {
 	background-image: url("../img/ENGINEERING_primary.png");
 	background-size: auto;
 	background-color: #f3f7f9;
-	background-position: middle;
+	background-position: bottom middle;
 	background-repeat: no-repeat;
 	position: relative;
 	overflow: hidden;
